# aptos-rust-sdk

./: .clippy.toml  AGENTS.md  AUDIT_SUMMARY_2026-05.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  REQUIRED_FEATURES.md  SECURITY_AUDIT.md  SECURITY_REVIEW_2026-05.md  codecov.yml  pr_comments.patch  rust-toolchain.toml  rustfmt.toml
.github/: actions-security-audit.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  cli-release.yml  e2e.yml  release.yml  security.yml
crates/aptos-cli/: BUILD.md  Cargo.toml
crates/aptos-cli/docs/: DESIGN.md  DESIGN_PLAN.md
crates/aptos-cli/src/: common.rs  config.rs  credentials.rs  interactive.rs  main.rs  output.rs  repl.rs
crates/aptos-cli/src/commands/: account.rs  info.rs  key.rs  mod.rs  move_cmd.rs  transaction.rs
crates/aptos-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/aptos-crypto/: Cargo.toml
crates/aptos-crypto-derive/src/: lib.rs
crates/aptos-crypto/src/: encoding_type.rs
crates/aptos-crypto/src/unit_tests/: bcs_test.rs
crates/aptos-repl/: BUILD.md  Cargo.toml
crates/aptos-repl/src/: common.rs  config.rs  credentials.rs  import.rs  main.rs  repl.rs
crates/aptos-repl/src/commands/: account.rs  move_cmd.rs  transaction.rs
crates/aptos-rust-sdk-types/: Cargo.toml
crates/aptos-rust-sdk-types/src/api_types/: account.rs  bitvec.rs  chain_id.rs  ledger_info.rs  mod.rs  move_types.rs  numbers.rs  transaction.rs  transaction_authenticator.rs  type_tag.rs  view.rs
crates/aptos-rust-sdk-v2/: CHANGELOG.md  Cargo.toml  PLAN.md  README.md
crates/aptos-rust-sdk-v2-macros/: Cargo.toml  README.md
crates/aptos-rust-sdk-v2-macros/src/: abi.rs  codegen.rs  lib.rs  parser.rs
crates/aptos-rust-sdk-v2-macros/tests/ui/fail/: move_struct_invalid_attr.stderr
crates/aptos-rust-sdk-v2/examples/: account_management.rs  advanced_transactions.rs  ans_names.rs  call_contract.rs  codegen.rs  contract_bindings.rs  deploy_module.rs  entry_function.rs  event_queries.rs  multi_agent.rs  multi_key_account.rs  multi_sig_account.rs  multisig_v2.rs  nft_operations.rs  read_contract_state.rs  script_transaction.rs  sponsored_transaction.rs  transaction_data.rs  transaction_waiting.rs  transfer.rs  view_function.rs
crates/aptos-rust-sdk-v2/feature-plans/: 01-core-types.md  04-transaction-building.md  06-error-handling.md  07-testing-strategy.md  08-multi-signature.md  12-code-generation.md  13-type-safe-bindings.md  14-auto-retry-backoff.md  15-connection-pooling.md  16-sponsored-transactions.md  17-ans-integration.md  18-transaction-batching.md  20-secp256r1-passkey.md  README.md
crates/aptos-rust-sdk-v2/scripts/: coverage.sh
crates/aptos-rust-sdk-v2/src/: aptos.rs  config.rs  error.rs  lib.rs  retry.rs
crates/aptos-rust-sdk-v2/src/account/: account.rs  ed25519.rs  keyless.rs  mnemonic.rs  mod.rs  multi_ed25519.rs  multi_key.rs  secp256k1.rs  secp256r1.rs
crates/aptos-rust-sdk-v2/src/api/: ans.rs  faucet.rs  fullnode.rs  indexer.rs  mod.rs  response.rs
crates/aptos-rust-sdk-v2/src/codegen/: build_helper.rs  generator.rs  mod.rs  move_parser.rs  types.rs
crates/aptos-rust-sdk-v2/src/crypto/: bls12381.rs  ed25519.rs  hash.rs  mod.rs  multi_ed25519.rs  multi_key.rs  secp256k1.rs  secp256r1.rs  traits.rs
crates/aptos-rust-sdk-v2/src/tests/: mod.rs
crates/aptos-rust-sdk-v2/src/transaction/: authenticator.rs  batch.rs  builder.rs  input.rs  mod.rs  payload.rs  simulation.rs  sponsored.rs  types.rs
crates/aptos-rust-sdk-v2/src/types/: address.rs  chain_id.rs  events.rs  hash.rs  mod.rs  move_types.rs  resources.rs
crates/aptos-rust-sdk-v2/tests/: lib.rs
crates/aptos-rust-sdk-v2/tests/behavioral/: mod.rs
crates/aptos-rust-sdk-v2/tests/e2e/: mod.rs
crates/aptos-rust-sdk/src/client/: builder.rs  config.rs  faucet.rs  mod.rs  rest_api.rs
crates/aptos-sdk/: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  tarpaulin.toml
crates/aptos-sdk-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/aptos-sdk-macros/src/: abi.rs  codegen.rs  lib.rs  parser.rs
crates/aptos-sdk-macros/tests/: trybuild.rs
crates/aptos-sdk-macros/tests/ui/fail/: move_struct_invalid_attr.rs
crates/aptos-sdk-macros/tests/ui/pass/: move_struct_basic.rs  move_struct_defaults.rs
crates/aptos-sdk/examples/: account_management.rs  advanced_transactions.rs  balance_checker.rs  call_contract.rs  codegen.rs  contract_bindings.rs  deploy_module.rs  entry_function.rs  event_queries.rs  indexer_queries.rs  multi_agent.rs  multi_key_account.rs  multi_sig_account.rs  multisig_v2.rs  nft_operations.rs  read_contract_state.rs  script_transaction.rs  simulation.rs  sponsored_transaction.rs  transaction_data.rs  transaction_waiting.rs  transfer.rs  view_function.rs
crates/aptos-sdk/feature-plans/: 02-cryptography.md  03-account-management.md  04-transaction-building.md  05-api-clients.md  07-testing-strategy.md  09-keyless-accounts.md  10-advanced-features.md  11-multi-key-accounts.md  12-code-generation.md  13-type-safe-bindings.md  14-auto-retry-backoff.md  15-connection-pooling.md  16-sponsored-transactions.md  19-input-entry-function-data.md  20-secp256r1-passkey.md  21-local-simulation.md  README.md
crates/aptos-sdk/scripts/: coverage.sh
crates/aptos-sdk/src/: aptos.rs  config.rs  error.rs  lib.rs  retry.rs
crates/aptos-sdk/src/account/: account.rs  ed25519.rs  keyless.rs  mnemonic.rs  mod.rs  multi_ed25519.rs  multi_key.rs  secp256k1.rs  secp256r1.rs  webauthn.rs
crates/aptos-sdk/src/api/: ans.rs  faucet.rs  fullnode.rs  indexer.rs  mod.rs  response.rs
crates/aptos-sdk/src/codegen/: build_helper.rs  generator.rs  mod.rs  move_parser.rs  types.rs
crates/aptos-sdk/src/crypto/: bls12381.rs  ed25519.rs  hash.rs  mod.rs  multi_ed25519.rs  multi_key.rs  secp256k1.rs  secp256r1.rs  traits.rs
crates/aptos-sdk/src/tests/: mod.rs
crates/aptos-sdk/tests/: lib.rs
crates/aptos-txn-worker/: Cargo.toml
crates/aptos-txn-worker/src/: lib.rs  submitter.rs  worker.rs
crates/examples/: Cargo.toml  README_view_function.md
crates/examples/src/: lib.rs  view_function_example.rs
scripts/: run-e2e.sh
(+47 files in other folders)
