[workspace]
resolver = "2"

members = [
    "crates/aptos-sdk",
    "crates/aptos-sdk-macros",
    "crates/aptos-cli",
]

# NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "crates/aptos-sdk",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2024"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-rust-sdk"
rust-version = "1.90.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aptos-sdk = { path = "crates/aptos-sdk" }
aptos-sdk-macros = { version = "0.1.0", path = "crates/aptos-sdk-macros" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
anyhow = "1.0.97"
arbitrary = { version = "1.4.1", features = ["derive"] }
aptos-bcs = "0.1.4"
bytes = { version = "1.10.1", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
proc-macro2 = "1.0.94"
proptest = "1.6.0"
proptest-derive = "0.5.1"
quote = "1.0.40"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
    "stream",
] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
thiserror = "2.0.12"
trybuild = "1.0.104"
tokio = { version = "1.44.1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

[profile.release]
debug = false
overflow-checks = true
strip = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.ci]
inherits = "release"
debug = "line-tables-only"
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true
