[package]
name = "aptos-sdk-macros"
version = "0.2.1"
description = "Procedural macros for type-safe Aptos contract bindings"
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["aptos", "blockchain", "macros", "codegen", "web3"]
categories = ["cryptography", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2.0", features = ["full", "parsing"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Path-only dep: stripped from published crate (breaks circular publish dependency).
# The macros crate only needs aptos-sdk for trybuild compile tests during local dev.
aptos-sdk = { path = "../aptos-sdk" }
tokio = { workspace = true, features = ["full", "test-util"] }
trybuild = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

