[package]
name = "aptos-txn-worker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aptos-crypto = { workspace = true }
aptos-rust-sdk = { workspace = true }
aptos-rust-sdk-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rand = { workspace = true }
